[package]
name = "example-rs"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "etcd-examples",
    "futures-stream-fibonacci",
    "futures-stream-readfile",
    "readfile",
    "file",
    "channel",
    "bytes-example",
    "result",
    "proto",
]
