[package]
name = "example-rs"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
rose_tree = { git = "https://github.com/divinerapier/rose_tree-rs.git"}

[workspace]
members = [
    "etcd-examples",
    "futures-stream-fibonacci",
    "futures-stream-readfile",
    "readfile",
    "file",
    "channel",
    "bytes-example",
    "result",
    "proto",
    "logger",
    "redis-examples",
    "ffi/c-array",
    "misc",
    "deref",
    "rose-tree",
    "s3",
    "map-result",
    "id_tree_example",
    "concurrency",
    "memory-layout",
    "tokio",
    "mutex",
    "drop-example",
    "hyper-example"
]
