[package]
name = "id_tree_example"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id_tree = "1.7.0"
rose_tree = {git = "https://github.com/divinerapier/rose_tree-rs", tag = "0.2.0"}
