[package]
name = "rose-tree"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rose_tree = {git = "https://github.com/divinerapier/rose_tree-rs"}
slab = "0.4.2"
petgraph = "0.4.13"
