[package]
name = "s3"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_s3 = "0.40.0"
rusoto_core = "0.40.0"
rusoto_credential = "0.40"
futures = "0.1.29"
log = "0.4.8"
env_logger = "0.7.0"
tempdir = "0.3"
rand = "0.6"
rand_xorshift = "0.1"
quickcheck = "0.9.0"
